# log-anomaly-detector

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: demo.py
src/log_anomaly/: __init__.py  detect.py
tests/: test_detect.py
